<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/siteDiscoveryFragment">

    <!-- Home: Site Discovery -->
    <fragment
        android:id="@+id/siteDiscoveryFragment"
        android:name="com.virasat.nammaguide.ui.discovery.SiteDiscoveryFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_site_discovery">

        <action
            android:id="@+id/action_siteDiscoveryFragment_to_siteDetailFragment"
            app:destination="@id/siteDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Site Detail / Information Hub -->
    <fragment
        android:id="@+id/siteDetailFragment"
        android:name="com.virasat.nammaguide.ui.detail.SiteDetailFragment"
        android:label="@string/title_site_detail"
        tools:layout="@layout/fragment_site_detail">

        <argument
            android:name="siteId"
            app:argType="string" />
    </fragment>

    <!-- QR Scanner -->
    <fragment
        android:id="@+id/qrScannerFragment"
        android:name="com.virasat.nammaguide.ui.qr.QRScannerFragment"
        android:label="@string/title_qr_scanner"
        tools:layout="@layout/fragment_qr_scanner">

        <action
            android:id="@+id/action_qrScannerFragment_to_siteDetailFragment"
            app:destination="@id/siteDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <!-- Travel Passport -->
    <fragment
        android:id="@+id/passportFragment"
        android:name="com.virasat.nammaguide.ui.passport.PassportFragment"
        android:label="@string/title_passport"
        tools:layout="@layout/fragment_passport" />

</navigation>
